# cicd-talk

./: .gitignore  README.md
.github/workflows/: deploy.yml  main.yml
backend/: Cargo.toml  docker-compose.yml  example.env
backend/migrations/2021-02-14-062628_bucs/: down.sql  up.sql
backend/src/: actions.rs  lib.rs  main.rs  models.rs  schema.rs
backend/tests/: db.rs
frontend/: package.json
frontend/pages/: index.js
