[package]
name = "backend"
version = "0.1.0"
authors = ["Tarik Eshaq <tarikeshaq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "^1.4.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.8"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1"